[project]
name = "qwen-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "hf_xet",
    "transformers",
    "diffusers @ git+https://github.com/huggingface/diffusers",
    "torch",
    "torchvision",
    "torchaudio",
    "click",
    "fastapi",
    "uvicorn",
    "httpx"
]
